--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,11 @@
 Glazum SDK for iOS Changelog
 
 --------------------------------------------
+Version: 0.1.1 (18 June 2013)
+--------------------------------------------
+* Avoid possible memory leaks
+
+--------------------------------------------
 Version: 0.1 (14 June 2013)
 --------------------------------------------
 * Initial release.
