--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,11 @@
 Glazum SDK for iOS Changelog
 
 --------------------------------------------
+Version: 0.1.3 (21 June 2013)
+--------------------------------------------
+* Minor changes
+
+--------------------------------------------
 Version: 0.1.2 (19 June 2013)
 --------------------------------------------
 * Minor UI changes
