Update change log

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,12 @@
 Glazum SDK for iOS Changelog
 
+
+--------------------------------------------
+Version: 0.1.5 (25 July 2013)
+--------------------------------------------
+* Do not show Glazum branding for appropriate 
+  plans
+
 --------------------------------------------
 Version: 0.1.4 (02 July 2013)
 --------------------------------------------
