--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 Glazum SDK for iOS Changelog
 
+--------------------------------------------
+Version: 0.2 (12 September 2013)
+--------------------------------------------
+* Prevent potentially duplicate symbol errors
+* Reduce library size up to 10%
 
 --------------------------------------------
 Version: 0.1.5 (25 July 2013)
