--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ Version: 0.2 (12 September 2013)
 --------------------------------------------
 * Prevent potentially duplicate symbol errors
 * Reduce library size up to 10%
+* Fixed minor bug
 
 --------------------------------------------
 Version: 0.1.5 (25 July 2013)
