--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,14 @@
 Glazum SDK for iOS Changelog
 
 --------------------------------------------
+Version: 0.2.2 (09 October 2013)
+--------------------------------------------
+* Fix minor bug
+* Send answer when user press "Done" keyboard 
+  button in case of single answer selection
+  type
+
+--------------------------------------------
 Version: 0.2.1 (25 September 2013)
 --------------------------------------------
 * Better support of iOS 7
