Update SDK to 0.3 (64bit support was added)

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,11 @@
 Glazum SDK for iOS Changelog
 
 --------------------------------------------
+Version: 0.3 (04 December 2013)
+--------------------------------------------
+* Add support for 64 bit architectures
+
+--------------------------------------------
 Version: 0.2.2 (09 October 2013)
 --------------------------------------------
 * Fix minor bug
